# cero_challenge

./: README.md  main.py  pyproject.toml
ceroai_challenge/: enums.py  utils.py
ceroai_challenge/commands/: filter_appointments_command.py
ceroai_challenge/mock_data/: mock_appointments.json  mock_rules.json
ceroai_challenge/models/: appointments.py  contactability.py  rules.py  rules_parser.py
tests/models/: test_appointments.py
