[tool.poetry]
name = "ceroai-challenge"
version = "0.1.0"
description = ""
authors = ["Rodrigo Iasalvatore <rodrigoiamo97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
